[package]
name = "coomer"
version = "0.1.0"
edition = "2021"
description = "a simple zoom tool that utilizes flameshot for wayland and is inspired by tsoding's boomer"
repository = "https://github.com/kkkfasya/coomer"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.9" 
flameshot-rs = { version = "1.0.1", features = ["image"]}
raylib = { version = "5.0.1", features = ["wayland", "opengl_33"] }

[features]
dev = []
