[package]
name = "coomer-wayshot"
version = "0.1.0"
edition = "2021"
description = "a simple zoom tool that utilizes wayshot for wayland and is inspired by tsoding's boomer"
repository = "https://github.com/kkkfasya/coomer"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.9" 
libwayshot = { git = "https://github.com/waycrate/wayshot", branch = "freeze-feat-andreas" }
raylib = { version = "5.0.1", features = ["wayland", "opengl_33"] }

[features]
dev = []
